@@ -28,7 +28,6 @@ import org.reactivestreams.Subscription;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -140,6 +139,7 @@ public class Publishers {
 
     /**
      * Registers an additional reactive type. Should be called during application static initialization.
+     *
      * @param type The type
      * @since 2.0
      */
@@ -151,6 +151,7 @@ public class Publishers {
 
     /**
      * Registers an additional reactive single type. Should be called during application static initialization.
+     *
      * @param type The type
      * @since 2.0
      */
@@ -163,6 +164,7 @@ public class Publishers {
 
     /**
      * Registers an additional reactive completable type. Should be called during application static initialization.
+     *
      * @param type The type
      * @since 2.0
      */
@@ -184,21 +186,21 @@ public class Publishers {
      * @return A list of known single types.
      */
     public static List<Class<?>> getKnownSingleTypes() {
-        return Collections.unmodifiableList(new ArrayList<>(SINGLE_TYPES));
+        return List.copyOf(SINGLE_TYPES);
     }
 
     /**
      * @return A list of known single types.
      */
     public static List<Class<?>> getKnownCompletableTypes() {
-        return Collections.unmodifiableList(new ArrayList<>(COMPLETABLE_TYPES));
+        return List.copyOf(COMPLETABLE_TYPES);
     }
 
     /**
      * Build a {@link Publisher} from a {@link CompletableFuture}.
      *
      * @param futureSupplier The supplier of the {@link CompletableFuture}
-     * @param <T>            The type of the publisher
+     * @param <T> The type of the publisher
      * @return The {@link Publisher}
      */
     public static <T> Publisher<T> fromCompletableFuture(Supplier<CompletableFuture<T>> futureSupplier) {
@@ -209,7 +211,7 @@ public class Publishers {
      * Build a {@link Publisher} from a {@link CompletableFuture}.
      *
      * @param future The {@link CompletableFuture}
-     * @param <T>  The type of the publisher
+     * @param <T> The type of the publisher
      * @return The {@link Publisher}
      */
     public static <T> Publisher<T> fromCompletableFuture(CompletableFuture<T> future) {
@@ -220,7 +222,7 @@ public class Publishers {
      * A {@link Publisher} that emits a fixed single value.
      *
      * @param value The value to emit
-     * @param <T>   The value type
+     * @param <T> The value type
      * @return The {@link Publisher}
      */
     public static <T> Publisher<T> just(T value) {
@@ -231,7 +233,7 @@ public class Publishers {
      * A {@link Publisher} that emits a fixed single value.
      *
      * @param error The error to emit
-     * @param <T>   The value type
+     * @param <T> The value type
      * @return The {@link Publisher}
      */
     public static <T> Publisher<T> just(Throwable error) {
@@ -241,7 +243,7 @@ public class Publishers {
     /**
      * A {@link Publisher} that completes without emitting any items.
      *
-     * @param <T>   The value type
+     * @param <T> The value type
      * @return The {@link Publisher}
      * @since 2.0.0
      */
@@ -253,13 +255,13 @@ public class Publishers {
      * Map the result from a publisher using the given mapper.
      *
      * @param publisher The publisher
-     * @param mapper    The mapper
-     * @param <T>       The generic type
-     * @param <R>       The result type
+     * @param mapper The mapper
+     * @param <T> The generic type
+     * @param <R> The result type
      * @return The mapped publisher
      */
     public static <T, R> Publisher<R> map(Publisher<T> publisher, Function<T, R> mapper) {
-        return (MicronautPublisher<R>) actual -> publisher.subscribe(new CompletionAwareSubscriber<T>() {
+        return (MicronautPublisher<R>) actual -> publisher.subscribe(new CompletionAwareSubscriber<>() {
             @Override
             protected void doOnSubscribe(Subscription subscription) {
                 actual.onSubscribe(subscription);
@@ -269,7 +271,7 @@ public class Publishers {
             protected void doOnNext(T message) {
                 try {
                     R result = Objects.requireNonNull(mapper.apply(message),
-                            "The mapper returned a null value.");
+                        "The mapper returned a null value.");
                     actual.onNext(result);
                 } catch (Throwable e) {
                     onError(e);
@@ -293,16 +295,16 @@ public class Publishers {
      * Map the result from a publisher using the given mapper or supply empty value.
      *
      * @param publisher The publisher
-     * @param mapOrSupplyEmpty    The mapOrSupplyEmpty
-     * @param <T>       The generic type
-     * @param <R>       The result type
-     * @since 2.5.0
+     * @param mapOrSupplyEmpty The mapOrSupplyEmpty
+     * @param <T> The generic type
+     * @param <R> The result type
      * @return The mapped publisher
+     * @since 2.5.0
      */
     public static <T, R> Publisher<R> mapOrSupplyEmpty(Publisher<T> publisher, MapOrSupplyEmpty<T, R> mapOrSupplyEmpty) {
-        return (MicronautPublisher<R>) actual -> publisher.subscribe(new CompletionAwareSubscriber<T>() {
+        return (MicronautPublisher<R>) actual -> publisher.subscribe(new CompletionAwareSubscriber<>() {
 
-            AtomicBoolean resultPresent = new AtomicBoolean();
+            final AtomicBoolean resultPresent = new AtomicBoolean();
 
             @Override
             protected void doOnSubscribe(Subscription subscription) {
@@ -313,7 +315,7 @@ public class Publishers {
             protected void doOnNext(T message) {
                 try {
                     R result = Objects.requireNonNull(mapOrSupplyEmpty.map(message),
-                            "The mapper returned a null value.");
+                        "The mapper returned a null value.");
                     actual.onNext(result);
                     resultPresent.set(true);
                 } catch (Throwable e) {
@@ -341,12 +343,12 @@ public class Publishers {
      * Map the result from a publisher using the given mapper.
      *
      * @param publisher The publisher
-     * @param consumer  The mapper
-     * @param <T>       The generic type
+     * @param consumer The mapper
+     * @param <T> The generic type
      * @return The mapped publisher
      */
     public static <T> Publisher<T> then(Publisher<T> publisher, Consumer<T> consumer) {
-        return (MicronautPublisher<T>) actual -> publisher.subscribe(new CompletionAwareSubscriber<T>() {
+        return (MicronautPublisher<T>) actual -> publisher.subscribe(new CompletionAwareSubscriber<>() {
             @Override
             protected void doOnSubscribe(Subscription subscription) {
                 actual.onSubscribe(subscription);
@@ -378,12 +380,12 @@ public class Publishers {
      * Allow executing logic on completion of a Publisher.
      *
      * @param publisher The publisher
-     * @param future    The runnable
-     * @param <T>       The generic type
+     * @param future The runnable
+     * @param <T> The generic type
      * @return The mapped publisher
      */
     public static <T> Publisher<T> onComplete(Publisher<T> publisher, Supplier<CompletableFuture<Void>> future) {
-        return (MicronautPublisher<T>) actual -> publisher.subscribe(new CompletionAwareSubscriber<T>() {
+        return (MicronautPublisher<T>) actual -> publisher.subscribe(new CompletionAwareSubscriber<>() {
             @Override
             protected void doOnSubscribe(Subscription subscription) {
                 actual.onSubscribe(subscription);
@@ -424,12 +426,16 @@ public class Publishers {
      * @return True if it is
      */
     public static boolean isConvertibleToPublisher(Class<?> type) {
+        // first, check for some common types without instanceof
+        if (type == Publisher.class) {
+            return true;
+        }
+        if (type.isPrimitive() || type.getName().startsWith("java.") || type.isArray()) {
+            return false;
+        }
         if (Publisher.class.isAssignableFrom(type)) {
             return true;
         } else {
-            if (type.isPrimitive() || type.getName().startsWith("java.")) {
-                return false;
-            }
             for (Class<?> reactiveType : REACTIVE_TYPES) {
                 if (reactiveType.isAssignableFrom(type)) {
                     return true;
@@ -454,7 +460,10 @@ public class Publishers {
      * @return True if it is
      */
     public static boolean isConvertibleToPublisher(Object object) {
-        if (object == null) {
+        if (object == null ||
+            // check some common types for performance
+            object instanceof String || object instanceof byte[]) {
+
             return false;
         }
         if (object instanceof Publisher) {
@@ -467,9 +476,9 @@ public class Publishers {
     /**
      * Attempts to convert the publisher to the given type.
      *
-     * @param object        The object to convert
+     * @param object The object to convert
      * @param publisherType The publisher type
-     * @param <T>           The generic type
+     * @param <T> The generic type
      * @return The Resulting in publisher
      * @deprecated replaced by {@link #convertPublisher(ConversionService, Object, Class)}
      */
@@ -482,9 +491,9 @@ public class Publishers {
      * Attempts to convert the publisher to the given type.
      *
      * @param conversionService The conversion service
-     * @param object            The object to convert
-     * @param publisherType     The publisher type
-     * @param <T>               The generic type
+     * @param object The object to convert
+     * @param publisherType The publisher type
+     * @param <T> The generic type
      * @return The Resulting in publisher
      * @since 4.0.0
      */
@@ -497,13 +506,35 @@ public class Publishers {
         if (object instanceof CompletableFuture cf && !(object instanceof Publisher<?>)) {
             @SuppressWarnings("unchecked") Publisher<T> futurePublisher = Publishers.fromCompletableFuture(() -> cf);
             return conversionService.convert(futurePublisher, publisherType)
-                    .orElseThrow(() -> unconvertibleError(object, publisherType));
+                .orElseThrow(() -> unconvertibleError(object, publisherType));
         }
         if (object instanceof MicronautPublisher && MicronautPublisher.class.isAssignableFrom(publisherType)) {
             return (T) object;
         }
         return conversionService.convert(object, publisherType)
-                .orElseThrow(() -> unconvertibleError(object, publisherType));
+            .orElseThrow(() -> unconvertibleError(object, publisherType));
+    }
+
+    /**
+     * Attempts to convert the publisher to the given type.
+     *
+     * @param conversionService The conversion service
+     * @param object The object to convert
+     * @param <T> The generic type
+     * @return The Resulting in publisher
+     * @since 4.6.0
+     */
+    @NonNull
+    public static <T> Publisher<T> convertToPublisher(@NonNull ConversionService conversionService, @NonNull Object object) {
+        Objects.requireNonNull(object, "Argument [object] cannot be null");
+        if (object instanceof Publisher<?> publisher) {
+            return (Publisher<T>) publisher;
+        }
+        if (object instanceof CompletableFuture cf) {
+            return Publishers.fromCompletableFuture(() -> cf);
+        }
+        return conversionService.convert(object, Publisher.class)
+            .orElseThrow(() -> unconvertibleError(object, Publisher.class));
     }
 
     /**
@@ -555,14 +586,16 @@ public class Publishers {
          * @param result The next value.
          * @return The mapped value.
          */
-        @NonNull R map(@NonNull T result);
+        @NonNull
+        R map(@NonNull T result);
 
         /**
          * Supplies an empty value if there is no next value.
          *
          * @return The result.
          */
-        @NonNull R supplyEmpty();
+        @NonNull
+        R supplyEmpty();
 
     }
 
